--- a/django-py3/BGPInspector/bgpWebApp/static/bgpWebApp/style.css
+++ b/django-py3/BGPInspector/bgpWebApp/static/bgpWebApp/style.css
@@ -11,6 +11,7 @@ html {
 	height: 2.5em;
 	background-color: #f5f5f5;
 	text-align: right;
+	min-width: 100%;
 }	
 
 .navbar-inverse .navbar-nav li > a:hover {
@@ -40,11 +41,15 @@ html {
 	text-align: left;
 }
 
-.content {
+.content.container {
+	padding-right: 0em;
+	padding-left: 0em;
 	padding-top: 3.5em;
 	padding-bottom: 2.5em;
 	text-align: center;
 	position: relative;
+	min-width: 100%;
+	min-height: 100%;
 }	
 
 hr {
