--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
@@ -35,7 +35,7 @@
 				</div>
 				<div id="navbarCollapse" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
-						<!--li><a href="{% url 'bgpWebApp:index' %}">Home</a></li-->
+						<li><a href="{% url 'bgpWebApp:index' %}">Home</a></li>
 						<li><a href="{% url 'bgpWebApp:query' %}">Query</a></li>
 						<!--li><a href="{% url 'bgpWebApp:history' %}">History</a></li-->
 					</ul>
@@ -44,25 +44,23 @@
 		</nav>
 
 		<div id="rowMaker" class="row">
-			<div id="leftCol" class="col-sm-2"></div>
-				<div id="contentCol" class="col-sm-8">
-					<div class="container ">
-						<div class="content">
-							{% block content %}
-							{% endblock %}
-						</div>
+			<div id="leftCol" class="col-sm-1"></div>
+				<div id="contentCol" class="col-sm-10">
+					<div class="container content">
+						{% block content %}
+						{% endblock %}
 					</div>
 				</div>
-			<div id="rightCol" class="col-sm-2"></div>
+			<div id="rightCol" class="col-sm-1"></div>
 		</div>
 		
-		<footer id="footer" class="footer">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12">
-						<a href="{% url 'bgpWebApp:impressum' %}">Impressum</a>
-					</div>
+		<footer id="footer" class="footer container">
+			<div class="row">
+				<div class="col-sm-1"></div>
+				<div class="col-sm-10">
+					<a href="{% url 'bgpWebApp:impressum' %}">Impressum</a>
 				</div>
+				<div class="col-sm-1"></div>
 			</div>
 		</footer>
 	</body>
