Added table and graph button. Graph displays dummy graph. Small view refactoring.

--- a/django-py3/BGPInspector/bgpWebApp/static/bgpWebApp/style.css
+++ b/django-py3/BGPInspector/bgpWebApp/static/bgpWebApp/style.css
@@ -56,3 +56,11 @@ hr {
 	height: 0.2em;
 	background: #717171;
 }
+
+/* for VisJS */
+#network_graph {
+	display: inline-block;
+	width: 600px;
+	height: 400px;
+	border: 1px solid lightgray;
+}
