Reduced small bgp dump even more to let VisJS draw a graph (poor performance). Cleaned up static files in bgpWebApp. Graph works now. Apache still cannot reach static files (json file for testing until VAST can answer).

--- a/django-py3/BGPInspector/bgpWebApp/static/bgpWebApp/style.css
+++ b/django-py3/BGPInspector/bgpWebApp/static/bgpWebApp/style.css
@@ -60,7 +60,7 @@ hr {
 /* for VisJS */
 #network_graph {
 	display: inline-block;
-	width: 600px;
-	height: 400px;
+	width: 100em;
+	height: 60em;
 	border: 1px solid lightgray;
 }
