--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
@@ -7,7 +7,7 @@
 
 		<title>BGPI-{% block title %}{% endblock %}</title>
 
-		{% load staticfiles %}
+		{% load static %}
 		<!-- own style -->
 		<link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/style.css' %}" />
 
