None functional filter buttons implemented with django forms

--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/index.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/index.html
@@ -11,6 +11,6 @@
 <br>
 <div id="query">
 	If you want to use our service you can input a query into our 
-	<a href="{% url 'bgpWebApp:query' %}">form</a>
+	<a href="{% url 'bgpWebApp:query' 'bgp' %}">form</a>
 </div>
 {% endblock %}
