--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
@@ -44,8 +44,7 @@
 				<div id="navbarCollapse" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
 						<li><a href="{% url 'bgpWebApp:index' %}">Home</a></li>
-						<li><a href="{% url 'bgpWebApp:query' %}">Query</a></li>
-						<!--li><a href="{% url 'bgpWebApp:history' %}">History</a></li-->
+						<li><a href="{% url 'bgpWebApp:query' 'bgp' %}">Query</a></li>
 					</ul>
 				</div>
 			</div>
