--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
@@ -1,72 +1,16 @@
 {% extends 'bgpWebApp/base.html' %}
+		{% load static %}
 
 {% block title %}Query{% endblock %}
 
-{% block headers %}{% endblock %}
+{% block headers %}
+<script src={% static 'bgpWebApp/js/oboe-browser.js' %}>
+</script>{% endblock %}
+
 
 {% block content %}
 	<h1>Enter your VAST query</h1>
-
-	<form action="{% url 'bgpWebApp:query' %}" method="post">
-	</form>
-
-	<form action="{% url 'bgpWebApp:query' %}" method="post">
-		{% csrf_token %}
-		{{ query_form }}
-		<input type="submit" value="Table" name="table">
-		<input type="submit" value="Graph" name="graph">
-	</form>
-	
-	<div class="result">
-		{% if query != None %}
-			<hr>
-
-			<!-- TABLE -->
-			{% if is_json and representation == 'table'  %}
-				<table class="result_table display" id="result_table">
-					<thead>
-					<tr>
-					{% for title in http_content.headers %}
-						<th>{{ title }}</th>
-					{% endfor %}
-					</tr>
-					</thead>
-					<tbody>
-					{% for row in http_content.table %}
-						<tr>
-							{% for entry in row %}
-								<td> {{ entry }}</td>
-							{% endfor %}
-						</tr>
-					{% endfor %}
-					</tbody>
-				</table>
-					</div>
-				</div>
-				<script>
-					$(document).ready(function() {
-						$('#result_table').DataTable();
-					});	
-				</script>	
-			{% endif %}		
-	
-			<!-- GRAPH -->
-			{% if is_json and representation == 'graph' %}
-				<div id="network_graph"></div>
-				<script type="text/javascript">
-					{% include 'bgpWebApp/graph.html' %}
-				</script>
-			{% endif %}
-
-			<!-- EVERYTHING ELSE -->
-			{% if not is_json and representation == 'text' %}
-				<h1> No json result!</h1>
-				<div id="found">
-					For your query: {{ query }} <br>
-					We just found this: {{ content_text }}
-				</div>
-			{% endif %}
-
-		{% endif %}
-	</div>
+    <script src={% static 'bgpWebApp/js/test.js' %}>
+    </script>
+    {% include 'bgpWebApp/gui.html' %}
 {% endblock %}
