--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
@@ -9,7 +9,7 @@
 
 		{% load static %}
 		<!-- own style -->
-		<link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/style.css' %}" />
+		<link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/css/style.css' %}" />
 
 		<!-- jquery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
