renamed js file for result handling

--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 	<h1>Enter your VAST query</h1>
-    <script src={% static 'bgpWebApp/js/test.js' %}>
+    <script src={% static 'bgpWebApp/js/result_handler.js' %}>
     </script>
     {% include 'bgpWebApp/gui.html' %}
 {% endblock %}
