data table implementation added - not able to process received json objets

--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
@@ -5,11 +5,16 @@
 
 {% block headers %}
 <script src={% static 'bgpWebApp/js/oboe-browser.js' %}>
-</script>{% endblock %}
+</script>
+{% endblock %}
 
 
 {% block content %}
 	<h1>Enter your VAST query</h1>
+	<div id="query">
+	</div>
+	<div id="result">
+	</div>
     <script src={% static 'bgpWebApp/js/result_handler.js' %}>
     </script>
     {% include 'bgpWebApp/gui.html' %}
