--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-		<meta http-equiv="X-Frame-Options" content="sameorigin"/>
+		<!--meta http-equiv="X-Frame-Options" content="sameorigin"/-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<title>BGPI-{% block title %}{% endblock %}</title>
