the table is now loading the data dynamically!

--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/gui.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/gui.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-alert('wat');
-test("blub");
+process_query("%26time<now", 'table', ["timestamp", "source_ip", "source_as", "prefix", "as_path", "origin_as", "origin", "nexthop", "local_pref", "med", "community", "atomix_aggregate", "aggregator"]
+);
 
 </script>
