Add experimental query builder

--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
@@ -4,9 +4,9 @@
 {% block title %}Query{% endblock %}
 
 {% block headers %}
-<script src={% static 'bgpWebApp/js/oboe-browser.js' %}>
-</script>{% endblock %}
-
+<script src={% static 'bgpWebApp/js/oboe-browser.js' %}></script>
+<script src={% static 'bgpWebApp/js/bootbox.min.js' %}></script>
+{% endblock %}
 
 {% block content %}
 	<h1>Enter your VAST query</h1>
