--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
@@ -24,7 +24,23 @@
 
 		<!-- VisJS -->	
 		<script type=" text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.2.0/vis.min.js"></script>
- 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.2.0/vis.min.css" />
+
+        <!-- Moment JS -->
+        <script src="http://momentjs.com/downloads/moment.js"></script>
+
+        <!-- JqueryUI -->
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+
+        <!-- JqueryUI timepicker addon -->
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-timepicker-addon/1.4.5/jquery-ui-timepicker-addon.min.css"/>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-timepicker-addon/1.4.5/jquery-ui-timepicker-addon.min.js"></script>
+
+        <!-- JUI Filter rules -->
+        <link rel="stylesheet" href="{% static 'bgpWebApp/js/jui_filter_rules/minified/jquery.jui_filter_rules.bs.min.css' %}"/>
+        <script src="{% static 'bgpWebApp/js/jui_filter_rules/minified/jquery.jui_filter_rules.min.js' %}"></script> 
+        <script src="{% static 'bgpWebApp/js/jui_filter_rules/minified/localization/en.min.js' %}"></script>
+
 		{% block headers %}
 		{% endblock %}
 	</head>
