Put gui.html into query div

--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/gui.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/gui.html
@@ -1,6 +1,6 @@
 {% load static %}
-<div id="demo_rules1" style="text-align:left"></div>
-<div style="margin-top: 30px; margin-bottom: 50px;">
+<div id="builder" style="text-align:left"></div>
+<div id="buttons" style="margin-top: 30px; margin-bottom: 50px;">
                 <button id="get_rules" type="button" class="btn btn-primary">See Query</button>
                 <button id="clear_rules" type="button" class="btn btn-primary">Clear Rules</button>
                 <button id="set_rules" type="button" class="btn btn-primary">Set Dummy Rules</button>
