--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/gui.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/gui.html
@@ -1,9 +1,47 @@
 {% load static %}
-<div id="builder" style="text-align:left"></div>
+<div id="builder">
+</div>
+<div id="options">
+    <form class="form-horizontal">
+    <fieldset>
+    
+    <!-- Form Name -->
+    <legend></legend>
+    
+    <!-- Multiple Checkboxes -->
+    <div class="control-group">
+      <label class="control-label" for="checkboxes">Query Options</label>
+      <div class="controls">
+        <label class="checkbox" for="historical">
+          <input type="checkbox" name="checkboxes" id="historical" value="Historical">
+          Historical
+        </label>
+        <label class="checkbox" for="continuous">
+          <input type="checkbox" name="checkboxes" id="continuous" value="Continuous">
+          Continues
+        </label>
+        <label class="checkbox" for="unified">
+          <input type="checkbox" name="checkboxes" id="unified" value="Unified">
+          unified
+        </label>
+      </div>
+    </div>
+    
+    <!-- Text input-->
+    <div class="control-group">
+      <label class="control-label" for="limit">Limit</label>
+      <div class="controls">
+        <input id="limit" name="textinput" type="text" placeholder="1000" class="input-mini">
+      </div>
+    </div>
+    
+    </fieldset>
+    </form>
+</div>
 <div id="buttons" style="margin-top: 30px; margin-bottom: 50px;">
-                <button id="get_rules" type="button" class="btn btn-primary">See Query</button>
-                <button id="clear_rules" type="button" class="btn btn-primary">Clear Rules</button>
-                <button id="set_rules" type="button" class="btn btn-primary">Set Dummy Rules</button>
+    <button id="get_rules" type="button" class="btn btn-primary">See Query</button>
+    <button id="clear_rules" type="button" class="btn btn-primary">Clear Rules</button>
+    <button id="set_rules" type="button" class="btn btn-primary">Set Dummy Rules</button>
 </div>
 <script src="{% static 'bgpWebApp/js/query_builder.js' %}">
 </script>
