Added Dummy loading bar (currently set for a limit of 1000 - limit requiered and number of total objects sent)

--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
@@ -1,11 +1,12 @@
 {% extends 'bgpWebApp/base.html' %}
-		{% load static %}
+{% load static %}
 
 {% block title %}Query{% endblock %}
 
 {% block headers %}
 <script src={% static 'bgpWebApp/js/oboe-browser.js' %}>
 </script>
+<link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/css/query.css' %}" />
 {% endblock %}
 
 
