--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/gui.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/gui.html
@@ -2,35 +2,34 @@
 <div id="builder">
 </div>
 <div id="options">
-    <form class="form-horizontal">
+    <form id="optionForm" class="form-horizontal" role="form" data-toggle="validator">
     <fieldset>
     
     <!-- Form Name -->
     <legend></legend>
     
     <!-- Multiple Checkboxes -->
-    <div class="control-group">
-      <label class="control-label" for="checkboxes">Query Options</label>
-      <div class="controls">
-        <label class="checkbox" for="historical">
-          <input type="checkbox" name="checkboxes" id="historical" value="Historical">
-          Historical
-        </label>
-        <label class="checkbox" for="continuous">
-          <input type="checkbox" name="checkboxes" id="continuous" value="Continuous">
-          Continues
-        </label>
-        <label class="checkbox" for="unified">
-          <input type="checkbox" name="checkboxes" id="unified" value="Unified">
-          unified
-        </label>
+      <div class="control-group error">
+        <label class="control-label" for="checkboxes">Query Options</label>
+        <div id=queryOptCheck class="controls">
+            <label class="checkbox" for="historical">
+              <input type="checkbox" name="checkboxes" id="historical" value="Historical">
+              Historical
+            </label>
+            <label class="checkbox" for="continuous">
+              <input type="checkbox" name="checkboxes" id="continuous" value="Continuous">
+              Continues
+            </label>
+            <label class="checkbox" for="unified">
+              <input type="checkbox" name="checkboxes" id="unified" value="Unified">
+              Unified
+            </label>
+        </div>
       </div>
-    </div>
-    
     <!-- Text input-->
     <div class="control-group">
       <label class="control-label" for="limit">Limit</label>
-      <div class="controls">
+      <div id=queryOptLimit class="controls">
         <input id="limit" name="textinput" type="text" placeholder="1000" class="input-mini">
       </div>
     </div>
@@ -43,5 +42,15 @@
     <button id="clear_rules" type="button" class="btn btn-primary">Clear Rules</button>
     <button id="set_rules" type="button" class="btn btn-primary">Set Dummy Rules</button>
 </div>
+<div class="row">
+  <div class="col-lg-6">
+    <div class="input-group">
+      <span class="input-group-btn">
+        <button id="show_query" class="btn btn-default" type="button">Show Query</button>
+      </span>
+      <input id="query_text" type="text" class="form-control">
+    </div><!-- /input-group -->
+  </div><!-- /.col-lg-6 -->
+</div><!-- /.row -->
 <script src="{% static 'bgpWebApp/js/query_builder.js' %}">
 </script>
