Make result and query floating

--- a/django-py3/BGPInspector/bgpWebApp/static/bgpWebApp/css/query.css
+++ b/django-py3/BGPInspector/bgpWebApp/static/bgpWebApp/css/query.css
@@ -2,6 +2,14 @@
 	text-align: left;
 }
 
+#result {
+    float:left;
+}
+
+#query {
+    float:left;
+}
+
 .progress-bar {
 	background-image: none;
 	background-color: #009999;
