--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
@@ -10,18 +10,17 @@
 <script src={% static 'bgpWebApp/SlickGrid/lib/jquery.event.drag-2.2.js' %}></script>
 <script src={% static 'bgpWebApp/SlickGrid/slick.core.js' %}></script>
 <script src={% static 'bgpWebApp/SlickGrid/slick.grid.js' %}></script>
+<script src={% static 'bgpWebApp/js/result_handler.js' %}></script>
 <link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/SlickGrid/slick.grid.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/css/query.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/css/query_builder.css' %}" />
 {% endblock %}
 
 
 {% block content %}
-    <link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/css/query_builder.css' %}" />
 	<div id="query">
     {% include 'bgpWebApp/gui.html' %}
 	</div>
 	<div id="result">
 	</div>
-    <script src={% static 'bgpWebApp/js/result_handler.js' %}>
-    </script>
 {% endblock %}
