outcommenting datatbles since it is not used currently

--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
@@ -20,8 +20,8 @@
         <script type="text/javascript" src="{% static 'bgpWebApp/js/alert.js' %}"></script>
 
 		<!-- DataTables -->
-		<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.7/css/jquery.dataTables.min.css"/>
-		<script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
+		<!--link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.7/css/jquery.dataTables.min.css"/>
+		<script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script-->
 
 		<!-- VisJS -->	
 		<!--script type=" text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.2.0/vis.min.js"></script-->
