switch to fattable library to enable endless scrolling and asyncronous data fetching when the scrolling stops.

--- a/django-py3/BGPInspector/bgpWebApp/static/bgpWebApp/css/base.css
+++ b/django-py3/BGPInspector/bgpWebApp/static/bgpWebApp/css/base.css
@@ -6,6 +6,9 @@ html {
 
 body {
 	min-height: 100%;
+	/* fattable stuff */
+	background-color: #FFF !important;
+	width: 100% !important;	
 }
 
 .footer {
