--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
@@ -19,13 +19,6 @@
 		<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="{% static 'bgpWebApp/js/alert.js' %}"></script>
 
-		<!-- DataTables -->
-		<!--link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.7/css/jquery.dataTables.min.css"/>
-		<script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script-->
-
-		<!-- VisJS -->	
-		<!--script type=" text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.2.0/vis.min.js"></script-->
-
         <!-- Moment JS -->
         <script src="http://momentjs.com/downloads/moment.js"></script>
 
@@ -46,45 +39,47 @@
 		{% endblock %}
 	</head>
 	<body>
-
-		<nav role="navigation" class="navbar navbar-inverse navbar-fixed-top">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a href="{% url 'bgpWebApp:index' %}" class="navbar-brand">BGPInspector</a>
-				</div>
-				<div id="navbarCollapse" class="collapse navbar-collapse">
-					<ul class="nav navbar-nav">
-						<li><a href="{% url 'bgpWebApp:index' %}">Home</a></li>
-						<li><a href="{% url 'bgpWebApp:query' %}">Query</a></li>
-					</ul>
-				</div>
+		
+		<div id="header" class="row">
+			<div class="col-sm-12">
+				<nav role="navigation" class="navbar navbar-inverse navbar-fixed-top">
+					<div class="container-fluid">
+						<div class="navbar-header">
+							<button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+							<a href="{% url 'bgpWebApp:index' %}" class="navbar-brand">BGPInspector</a>
+						</div>
+						<div id="navbarCollapse" class="collapse navbar-collapse">
+							<ul class="nav navbar-nav">
+								<li><a href="{% url 'bgpWebApp:index' %}">Home</a></li>
+								<li><a href="{% url 'bgpWebApp:query' %}">Query</a></li>
+							</ul>
+						</div>
+					</div>
+				</nav>
 			</div>
-		</nav>
+		</div>
 
 		<div id="rowMaker" class="row">
-			<div id="leftCol" class="col-sm-1"></div>
-				<div id="contentCol" class="col-sm-10">
+			<!--div id="leftCol" class="col-sm-1"></div-->
+				<div id="contentCol" class="col-sm-12">
 					<div class="container content">
 						{% block content %}
 						{% endblock %}
 					</div>
 				</div>
-			<div id="rightCol" class="col-sm-1"></div>
+			<!--div id="rightCol" class="col-sm-1"></div-->
 		</div>
 		
 		<footer id="footer" class="footer container">
 			<div class="row">
-				<div class="col-sm-1"></div>
-				<div class="col-sm-10">
+				<div class="col-sm-12">
 					<a href="{% url 'bgpWebApp:impressum' %}">Impressum</a>
 				</div>
-				<div class="col-sm-1"></div>
 			</div>
 		</footer>
 	</body>
