DataTable integration - not finished

--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
@@ -6,11 +6,11 @@
 {% block headers %}
 {% load staticfiles %}
 <script src={% static 'bgpWebApp/js/result_handler.js' %}></script>
-<script src={% static 'bgpWebApp/fattable/fattable.js' %}></script>
 <script src={% static 'bgpWebApp/js/oboe-browser.js' %}></script>
 <script src='//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.5/js/bootstrap-select.min.js'></script>
-<link rel="stylesheet" type="text/css" href='//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.5/css/bootstrap-select.min.css'></script>
-<link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/fattable/fattable.css' %}" />
+<script src='//cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js'></script>
+<link rel="stylesheet" type="text/css" href='//cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css' />
+<link rel="stylesheet" type="text/css" href='//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.5/css/bootstrap-select.min.css' />
 <link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/css/query.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/css/query_builder.css' %}" />
 {% endblock %}
