Fix query creation, add non-minified version of qb to base for better debugging

--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
@@ -32,7 +32,7 @@
 
         <!-- JUI Filter rules -->
         <link rel="stylesheet" href="{% static 'bgpWebApp/js/jui_filter_rules/minified/jquery.jui_filter_rules.bs.min.css' %}"/>
-        <script src="{% static 'bgpWebApp/js/jui_filter_rules/minified/jquery.jui_filter_rules.min.js' %}"></script> 
+        <script src="{% static 'bgpWebApp/js/jui_filter_rules/jquery.jui_filter_rules.js' %}"></script> 
         <script src="{% static 'bgpWebApp/js/jui_filter_rules/minified/localization/en.min.js' %}"></script>
 
 		{% block headers %}
