--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
@@ -26,5 +26,8 @@
 	</div>
 	<div id="result">
 	<table id="table" class="display" width="100%"></table>
+    <span id=prevPage >Prev</span>
+    <span id=nextPage >Next</span>
+
 	</div>
 {% endblock %}
