--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
@@ -13,22 +13,37 @@
 
 		<!-- jquery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <!-- <script src="{% static 'bgpWebApp/js/libs/jquery.min.js' %}"></script>  -->
 	
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="{% static
+             'bgpWebApp/css/libs/bootstrap.min.css' %}" /> -->
 		<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="{% static 'bgpWebApp/js/alert.js' %}"></script>
+		<!-- <script type="text/javascript" src="{% static 'bgpWebApp/js/libs/bootstrap.min.js'
+             %}"></script> -->
+		<script type="text/javascript" src="{% static 'bgpWebApp/js/libs/alert.js' %}"></script>
 
         <!-- Moment JS -->
-        <script src="http://momentjs.com/downloads/moment.js"></script>
+		<script type="text/javascript" src="{% static 'bgpWebApp/js/libs/moment.js' %}"></script>
+        <!-- <script src="http://momentjs.com/downloads/moment.js"></script> -->
 
         <!-- JqueryUI -->
-        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+        <!-- <link rel="stylesheet"
+             href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+             -->
+		<link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/css/libs/jquery-ui.css' %}" />
+        <!-- <script
+        src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script> -->
+		<script type="text/javascript" src="{% static 'bgpWebApp/js/libs/jquery-ui.min.js' %}"></script>
 
         <!-- JqueryUI timepicker addon -->
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-timepicker-addon/1.4.5/jquery-ui-timepicker-addon.min.css"/>
+        <!-- <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-timepicker-addon/1.4.5/jquery-ui-timepicker-addon.min.css"/>-->
+		<link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/css/libs/jquery-ui-timepicker-addon.min.css' %}" />
+
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-timepicker-addon/1.4.5/jquery-ui-timepicker-addon.min.js"></script>
+		<script type="text/javascript" src="{% static 'bgpWebApp/js/libs/jquery-ui-timepicker-addon.min.js' %}"></script>
 
         <!-- JUI Filter rules -->
         <link rel="stylesheet" href="{% static 'bgpWebApp/js/jui_filter_rules/minified/jquery.jui_filter_rules.bs.min.css' %}"/>
@@ -40,7 +55,7 @@
 	</head>
 	<body>
 		
-		<div id="header" class="row">
+		<div id="header" >
 			<div class="col-sm-12">
 				<nav role="navigation" class="navbar navbar-inverse navbar-fixed-top">
 					<div class="container-fluid">
@@ -64,7 +79,7 @@
 			</div>
 		</div>
 
-		<div id="rowMaker" class="row">
+		<div id="rowMaker" >
 			<!--div id="leftCol" class="col-sm-1"></div-->
 				<div id="contentCol" class="col-sm-12">
 					<div class="container content">
