Implement paging, dynamic table creation and fix a lot of bugs

--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
@@ -50,6 +50,9 @@
         <script src="{% static 'bgpWebApp/js/jui_filter_rules/jquery.jui_filter_rules.js' %}"></script> 
         <script src="{% static 'bgpWebApp/js/jui_filter_rules/minified/localization/en.min.js' %}"></script>
 
+        <!-- Chunky.js -->
+        <script src="{% static 'bgpWebApp/js/libs/chunky.js' %}"></script>
+
 		{% block headers %}
 		{% endblock %}
 	</head>
