--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
@@ -25,9 +25,11 @@
 		</div>
 	</div>
 	<div id="result">
-	<table id="table" class="display" width="100%"></table>
+	<table id="table" class="display compact" width="100%"></table>
     <span id=prevPage >Prev</span>
     <span id=nextPage >Next</span>
+	<br>
+    <span id=pageNum></span>
 
 	</div>
 {% endblock %}
