--- a/django-py3/BGPInspector/bgpWebApp/static/bgpWebApp/css/query.css
+++ b/django-py3/BGPInspector/bgpWebApp/static/bgpWebApp/css/query.css
@@ -10,6 +10,10 @@
 	margin-top: 1em;
 	height: 40em;*/
 }
+td { 
+ overflow: hidden;
+ text-overflow: ellipsis; 
+}
 
 #table_info {
     display:none;
